--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,14 @@
-<html>
-    <head>
-        <title>Alex's blog</title>  
-    </head>
-    <body>
-        <div>
-            <h1><a href="">My Blog</a></h1>
-        </div>
-
-        {% for post in posts %}
-            <div>
-                <p>published: {{ post.published_date }}</p>
-                <h1><a href="">{{ post.title }}</a></h1>
+{% extends 'blog/base.html' %}
+{% block content %}
+    {% for post in posts %}
+        <div class="solo_post">
+            <div class="post">
+                <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
                 <p>{{ post.text|linebreaksbr }}</p>
+                <div class="date">
+                    {{ post.published_date }}
+                </div>
             </div>
-        {% endfor %}
-    </body>    
-</html>
+        </div>    
+    {% endfor %}
+{% endblock content %}
