--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,16 +3,18 @@
     {% block content %}
         <div class="post">
             {% if post.published_date %}
-                <div class="date">
-                    {{ post.published_date }}
-                    {% if user.is_authenticated %}
-                        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-                    {% endif %}    
-                </div>
+                {{ pass }}
             {% else %}
-                <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
+                <a class="btn btn-primary" href="{% url 'post_publish' pk=post.pk %}" style="float: right;margin-left: 5px;">Publish</a>
             {% endif %}
+            {% if user.is_authenticated %}
+                <a class="btn btn-primary" href="{% url 'post_edit' pk=post.pk %}" style="padding: 9px;float: right;"><span class="glyphicon glyphicon-pencil"></span></a>
+                <a class="btn btn-primary" href="{% url 'post_remove' pk=post.pk %}" style="float: right;margin-right: 5px;padding: 9px;"><span class="glyphicon glyphicon-remove"></span></a>
+            {% endif %}    
             <h1>{{ post.title }}</h1>
             <p>{{ post.text|linebreaksbr }}</p>
+            <div class="date">
+                {{ post.published_date }}
+            </div>
         </div>
     {% endblock %}
