--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     {% for post in posts %}
-        <div class="post">
+        <div class="post" style="border-bottom: 1px solid #cccccc; margin-bottom: 25px;">
             <p class="date">created: {{ post.created_date|date:'d-m-Y' }}</p>
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <p>{{ post.text|truncatechars:200 }}</p>
