--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,6 +8,7 @@
                 <p>{{ post.text|linebreaksbr }}</p>
                 <div class="date">
                     {{ post.published_date }}
+                    <a href="{% url 'post_detail' pk=post.pk %}" style="text-decoration: none;">Comments: {{ post.approved_comments.count }}</a>
                 </div>
             </div>
         </div>    
