--- a/blog/templates/blog/add_comment_to_post.html
+++ b/blog/templates/blog/add_comment_to_post.html
@@ -1,9 +1,9 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <h1>New comment</h1>
-    <form method="POST" class="post-form">{% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="save btn btn-primary">Send</button>
-    </form>
+	    <h1>New comment</h1>
+	    <form method="POST" class="post-form">{% csrf_token %}
+	    	    {{ form.as_p }} 
+	        <button type="submit" class="save btn btn-primary" style="margin-bottom: 10px;">Send</button>
+	    </form>
 {% endblock %}
