--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,8 +10,8 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
-    <body>
-        <div class="page-header col-xs-12">
+    <body style="background-image: url(../../static/img/background_forest.jpg); background-repeat: repeat-y;">
+        <div class="page-header col-xs-12" style="border-bottom: 1px solid black;z-index: 99999;">
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
                 <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
@@ -19,12 +19,13 @@
             {% else %}
                 <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
             {% endif %}
-            <h1><a href="{% url 'post_list' %}" style="text-decoration: none;">My first blog</a></h1>
+            <h1 style="text-align: left;"><a href="{% url 'post_list' %}" style="text-decoration: none;">My first blog</a></h1>
         </div>
 
-        <div class="content container">
+        <div class="content container" style="text-align: justify;margin-left: 0;">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-2"></div>
+                <div class="col-md-10" style="background: linear-gradient(to top, #ffffff, #E0E0E0);box-shadow: 0 0 10px rgba(0,0,0,0.5);">
                     {% block content %}
                     {% endblock %}
                 </div>
