--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -6,18 +6,18 @@
     {% endif %}
     <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
-        <table>
+        <table style="margin-bottom: 10px;">
         <tr>
-            <td>{{ form.username.label_tag }}</td>
-            <td>{{ form.username }}</td>
+            <td style="font-family: 'Lobster', cursive;letter-spacing: 1;padding-top:25px;padding-right: 5px;">{{ form.username.label_tag }}</td>
+            <td style="padding-top:25px;padding-bottom: 5px;">{{ form.username }}</td>
         </tr>
         <tr>
-            <td>{{ form.password.label_tag }}</td>
+            <td style="font-family: 'Lobster', cursive; letter-spacing: 1; padding-right: 5px;">{{ form.password.label_tag }}</td>
             <td>{{ form.password }}</td>
         </tr>
         </table>
 
-        <input type="submit" value="login" />
+        <input class="btn btn-primary" type="submit" value="Login" style="margin-bottom: 10px;" />
         <input type="hidden" name="next" value="{{ next }}" />
     </form>  
 {% endblock %}
