--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
-    <body style="background-image: url(../../static/img/background_forest.jpg); background-repeat: repeat-y;">
+    <body style="background-image: url(../../static/img/background_forest.jpg); background-repeat: repeat-y;opacity: 0.8;">
         <div class="page-header col-xs-12" style="border-bottom: 1px solid black;z-index: 99999;">
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
