--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,10 +2,10 @@
 {% load staticfiles %}
 {% block content %}
     {% for post in posts %}
-        <div class="solo_post">
+        <div class="solo_post" style="border-bottom: 1px solid #999ea8;">
             <div class="post">
                 <h1 style="text-align: center;"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-                <p>{{ post.text|linebreaksbr }}</p>
+                <p style="color:black;">{{ post.text|linebreaksbr }}</p>
                 <div class="date">
                     {{ post.published_date }}
                     <a href="{% url 'post_detail' pk=post.pk %}" style="text-decoration: none;">Comments: {{ post.approved_comments.count }}</a>
